--- a/src/components/MoneyInfo/styles.css
+++ b/src/components/MoneyInfo/styles.css
@@ -7,4 +7,6 @@
     background: linear-gradient(to right, #eecda3, #ef629f); 
     padding: 1rem;
     margin-top: 0.6rem;
+    position: sticky;
+    top: 0;
 }
